--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 
-		<h2>Latest Content</h2>
+		<h2>Content</h2>
 
 		<a href="/relax/">Relax</a>
 		&mdash; A minimal white noise progressive web app.</p>
