--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<h1>alexsci.com</h1>
 
-		<h2>Content</h2>
+		<h4>Tools</h4>
 
+		<p>
 		<a href="/relax/">Relax</a>
-		&mdash; A minimal white noise progressive web app.</p>
+		&mdash; A minimal white noise progressive web app.
+		</p>
 
+		<p>
 		<a href="/CyberChef/">CyberChef</a>
 		&mdash; A rehosted instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a>
-
+		</p>
 	</body>
 </html>
