Link to Android apps

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 		<h4>Tools</h4>
 
+                <p>
+                <a href="/android-apps/">Android Apps</a>
+		&mdash; Android Apps including AWS Lambda Invoker app
+		</p>
+
 		<p>
 		<a href="/relax/">Relax</a>
 		&mdash; A minimal white noise progressive web app.
