absolute links for tools

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <h4>Tools</h4>
 
 <p>
-<a href="/android-apps/">Android Apps</a>
+<a href="https://alexsci.com/android-apps/">Android Apps</a>
 &mdash; Android Apps including AWS Lambda Invoker app
 </p>
 
 <p>
-<a href="/relax/">Relax</a>
+<a href="https://alexsci.com/relax/">Relax</a>
 &mdash; A minimal white noise progressive web app.
 </p>
 
 <p>
-<a href="/CyberChef/">CyberChef</a>
+<a href="https://alexsci.com/CyberChef/">CyberChef</a>
 &mdash; A rehosted instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a>
 </p>
 </section>
