Style and validity checks (#5)
Tweaking style, adding checks.

--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>alexsci.com</title>
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<h1>alexsci.com</h1>
+<head>
+<meta charset="utf-8">
+<title>alexsci.com</title>
+<link rel="stylesheet" href="style.css">
+</head>
 
-		<h4>Tools</h4>
+<body>
+<header>
+<h1>alexsci.com</h1>
+</header>
 
-                <p>
-                <a href="/android-apps/">Android Apps</a>
-		&mdash; Android Apps including AWS Lambda Invoker app
-		</p>
+<section>
+<h4>Tools</h4>
 
-		<p>
-		<a href="/relax/">Relax</a>
-		&mdash; A minimal white noise progressive web app.
-		</p>
+<p>
+<a href="https://alexsci.com/android-apps/">Android Apps</a>
+&mdash; Android Apps including AWS Lambda Invoker app
+</p>
 
-		<p>
-		<a href="/CyberChef/">CyberChef</a>
-		&mdash; A rehosted instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a>
-		</p>
-	</body>
-</html>
+<p>
+<a href="https://alexsci.com/relax/">Relax</a>
+&mdash; A minimal white noise progressive web app.
+</p>
+
+<p>
+<a href="https://alexsci.com/CyberChef/">CyberChef</a>
+&mdash; A rehosted instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a>
+</p>
+</section>
+
