Move android apps content into blog

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h4>Tools</h4>
 
 <p>
-<a href="https://alexsci.com/android-apps/">Android Apps</a>
+<a href="/android-apps/">Android Apps</a>
 &mdash; Android Apps including AWS Lambda Invoker app
 </p>
 
