center some images

--- a/android-apps/aws-lambda-invoker/index.html
+++ b/android-apps/aws-lambda-invoker/index.html
@@ -44,13 +44,13 @@ This project is open source! <a href="https://github.com/ralexander-phi/android-
 <h2>Images</h2>
 
 <p>
-<img src="../images/ListUsers.jpg" width="300em" alt="List Users Activity">
-<img src="../images/ScanQRCode.jpg" width="300em" alt="Scan a QR code">
-<img src="../images/ListFunctions.jpg" width="300em" alt="List Functions Activity">
-<img src="../images/EditJSON.jpg" width="300em" alt="Edit JSON Activity">
-<img src="../images/EditNumber.jpg" width="300em" alt="Edit JSON Number">
-<img src="../images/RunFunction.jpg" width="300em" alt="Run AWS Lambda Function">
-<img src="../images/ViewResults.jpg" width="300em" alt="View Function Results">
+<img src="../images/ListUsers.jpg" width="300em" alt="List Users Activity" class="flow">
+<img src="../images/ScanQRCode.jpg" width="300em" alt="Scan a QR code" class="flow">
+<img src="../images/ListFunctions.jpg" width="300em" alt="List Functions Activity" class="flow">
+<img src="../images/EditJSON.jpg" width="300em" alt="Edit JSON Activity" class="flow">
+<img src="../images/EditNumber.jpg" width="300em" alt="Edit JSON Number" class="flow">
+<img src="../images/RunFunction.jpg" width="300em" alt="Run AWS Lambda Function" class="flow">
+<img src="../images/ViewResults.jpg" width="300em" alt="View Function Results" class="flow">
 </p>
 
 <p>
