Adding Web Audio Ping

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 </p>
 
 <p>
+<a href="https://alexsci.com/web-audible-ping/">Audible Website Ping</a>
+&mdash; Check Internet connectivity in your browser, with sound.
+</p>
+
+<p>
 <a href="https://alexsci.com/CyberChef/">CyberChef</a>
 &mdash; A rehosted instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a>
 </p>
