--- a/index.html
+++ b/index.html
@@ -35,3 +35,10 @@
 </p>
 </section>
 
+<section>
+<h4>Games</h4>
+<p>
+<a href="https://alexsci.com/games/">Games for Toddlers</a>
+&mdash; Help toddlers learn basic computer skills with simple games.
+</p>
+</section>
