Add draw.io link

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 <a href="https://alexsci.com/CyberChef/">CyberChef</a>
 &mdash; A rehosted instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a>
 </p>
+
+<p>
+<a href="https://alexsci.com/drawio/">Draw.io</a>
+&mdash; A rehosted instance of <a href="https://draw.io">draw.io</a>
+</p>
 </section>
 
 <section>
