Adding Weekly Chore Tracker, Marp Action, and GitHub link

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
 </p>
 
 <p>
+<a href="https://alexsci.com/chore-wheel/">Weekly Chore Tracker</a>
+&mdash; A simple weekly chore tracker.
+</p>
+
+<p>
 <a href="https://alexsci.com/web-audible-ping/">Audible Website Ping</a>
 &mdash; Check Internet connectivity in your browser, with sound.
 </p>
 
 <p>
-<a href="https://alexsci.com/CyberChef/">CyberChef</a>
-&mdash; A rehosted instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a>
-</p>
-
-<p>
-<a href="https://alexsci.com/drawio/">Draw.io</a>
-&mdash; A rehosted instance of <a href="https://draw.io">draw.io</a>
+<a href="https://alexsci.com/test-marp-action/">Marp Action for GitHub</a>
+&mdash; Instantly host markdown presentations using GitHub Pages.
 </p>
 </section>
 
@@ -45,5 +45,27 @@
 <p>
 <a href="https://alexsci.com/games/">Games for Toddlers</a>
 &mdash; Help toddlers learn basic computer skills with simple games.
+</p>
+</section>
+
+<section>
+<h4>Source Code</h4>
+<p>
+<a href="https://github.com/ralexander-phi/">GitHub</a>
+&mdash; Source code for these projects &amp; more.
+</p>
+</section>
+
+<section>
+<h4>Rehosted Tools</h4>
+
+<p>
+<a href="https://alexsci.com/CyberChef/">CyberChef</a>
+&mdash; An instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a>
+</p>
+
+<p>
+<a href="https://alexsci.com/drawio/">Draw.io</a>
+&mdash; An instance of <a href="https://github.com/jgraph/drawio">draw.io</a>
 </p>
 </section>
