--- a/index.html
+++ b/index.html
@@ -22,21 +22,25 @@
 <p>
 <a href="https://alexsci.com/relax/">Relax</a>
 &mdash; A minimal white noise progressive web app.
+<a href="https://github.com/ralexander-phi/relax">Source Code</a>
 </p>
 
 <p>
 <a href="https://alexsci.com/chore-wheel/">Weekly Chore Tracker</a>
 &mdash; A simple weekly chore tracker.
+<a href="https://github.com/ralexander-phi/chore-wheel">Source Code</a>
 </p>
 
 <p>
 <a href="https://alexsci.com/web-audible-ping/">Audible Website Ping</a>
 &mdash; Check Internet connectivity in your browser, with sound.
+<a href="https://github.com/ralexander-phi/web-audible-ping">Source Code</a>
 </p>
 
 <p>
 <a href="https://alexsci.com/test-marp-action/">Marp Action for GitHub</a>
 &mdash; Instantly host markdown presentations using GitHub Pages.
+<a href="https://github.com/ralexander-phi/marp-action">Source Code</a>
 </p>
 </section>
 
@@ -45,6 +49,7 @@
 <p>
 <a href="https://alexsci.com/games/">Games for Toddlers</a>
 &mdash; Help toddlers learn basic computer skills with simple games.
+<a href="https://github.com/ralexander-phi/games">Source Code</a>
 </p>
 </section>
 
