needs some color

--- a/index.html
+++ b/index.html
@@ -12,65 +12,49 @@
 </header>
 
 <section>
-<h4>Tools</h4>
-
 <p>
-<a href="/android-apps/">Android Apps</a>
-&mdash; Android Apps including AWS Lambda Invoker app
+<a href="https://alexsci.com/android-apps/aws-lambda-invoker/">AWS Lambda Invoker app</a>
+&mdash; Run AWS Lambda functions from your Android device.
+<a href="https://github.com/ralexander-phi/android-aws-lambda-runner">[code]</a>
 </p>
 
 <p>
 <a href="https://alexsci.com/relax/">Relax</a>
 &mdash; A minimal white noise progressive web app.
-<a href="https://github.com/ralexander-phi/relax">Source Code</a>
-</p>
-
-<p>
-<a href="https://alexsci.com/chore-wheel/">Weekly Chore Tracker</a>
-&mdash; A simple weekly chore tracker.
-<a href="https://github.com/ralexander-phi/chore-wheel">Source Code</a>
-</p>
-
-<p>
-<a href="https://alexsci.com/web-audible-ping/">Audible Website Ping</a>
-&mdash; Check Internet connectivity in your browser, with sound.
-<a href="https://github.com/ralexander-phi/web-audible-ping">Source Code</a>
+<a href="https://github.com/ralexander-phi/relax">[code]</a>
 </p>
 
 <p>
 <a href="https://alexsci.com/test-marp-action/">Marp Action for GitHub</a>
 &mdash; Instantly host markdown presentations using GitHub Pages.
-<a href="https://github.com/ralexander-phi/marp-action">Source Code</a>
+<a href="https://github.com/ralexander-phi/marp-action">[code]</a>
 </p>
-</section>
 
-<section>
-<h4>Games</h4>
+<p>
+<a href="https://alexsci.com/chore-wheel/">Weekly Chore Tracker</a>
+&mdash; A simple weekly chore tracker.
+<a href="https://github.com/ralexander-phi/chore-wheel">[code]</a>
+</p>
+
+<p>
+<a href="https://alexsci.com/web-audible-ping/">Audible Website Ping</a>
+&mdash; Check Internet connectivity in your browser, with sound.
+<a href="https://github.com/ralexander-phi/web-audible-ping">[code]</a>
+</p>
+
 <p>
 <a href="https://alexsci.com/games/">Games for Toddlers</a>
 &mdash; Help toddlers learn basic computer skills with simple games.
-<a href="https://github.com/ralexander-phi/games">Source Code</a>
+<a href="https://github.com/ralexander-phi/games">[code]</a>
 </p>
-</section>
-
-<section>
-<h4>Source Code</h4>
-<p>
-<a href="https://github.com/ralexander-phi/">GitHub</a>
-&mdash; Source code for these projects &amp; more.
-</p>
-</section>
-
-<section>
-<h4>Rehosted Tools</h4>
 
 <p>
 <a href="https://alexsci.com/CyberChef/">CyberChef</a>
-&mdash; An instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a>
+&mdash; A rehosted instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a>
 </p>
 
 <p>
 <a href="https://alexsci.com/drawio/">Draw.io</a>
-&mdash; An instance of <a href="https://github.com/jgraph/drawio">draw.io</a>
+&mdash; A rehosted instance of <a href="https://github.com/jgraph/drawio">draw.io</a>
 </p>
 </section>
