--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>alexsci.com</title>
 <link rel="stylesheet" href="style.css">
+<!-- https://indieauth.com/setup -->
+<link rel="me" href="https://github.com/ralexander-phi">
 </head>
 
 <body>
