--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 </p>
 
 <p>
+<a href="https://alexsci.com/which-license/">Which License</a>
+&mdash; Identify common software licenses.
+<a href="https://github.com/ralexander-phi/which-license">[code]</a>
+</p>
+
+<p>
 <a href="https://alexsci.com/relax/">Relax</a>
 &mdash; A minimal white noise progressive web app.
 <a href="https://github.com/ralexander-phi/relax">[code]</a>
