--- a/index.html
+++ b/index.html
@@ -1,76 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<title>alexsci.com</title>
-<link rel="stylesheet" href="style.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>alexsci.com</title>
+    <link rel="stylesheet" href="bulma.min.css">
+  </head>
 
-<body>
-<header>
-<h1>alexsci.com</h1>
-</header>
+  <body>
+    <nav class="navbar is-dark p-4" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <h1 class="title has-text-light">alexsci.com</h1>
+      </div>
+    </nav>
 
-<section>
-<h4>Tools</h4>
+    <section class="section">
+      <div class="columns">
+        <div class="column is-one-third p-4">
+          <article class="message is-info">
+            <div class="message-header">
+              <p class="is-centered">Android Apps</p>
+            </div>
+            <div class="message-body">
+              <p>Android Apps including AWS Lambda Invoker app</p>
+              <p class="mt-4"><a href="/android-apps/">Open</a></p>
+            </div>
+          </article>
+        </div>
 
-<p>
-<a href="/android-apps/">Android Apps</a>
-&mdash; Android Apps including AWS Lambda Invoker app
-</p>
+        <div class="column is-one-third p-4">
+          <article class="message is-info">
+            <div class="message-header">
+              <p class="is-centered">Relax</p>
+            </div>
+            <div class="message-body">
+              <p>A minimal white noise progressive web app.</p>
+              <p class="mt-4"><a href="https://alexsci.com/relax/">Open</a></p>
+              <p><a href="https://github.com/ralexander-phi/relax">Source Code</a></p>
+            </div>
+          </article>
+        </div>
 
-<p>
-<a href="https://alexsci.com/relax/">Relax</a>
-&mdash; A minimal white noise progressive web app.
-<a href="https://github.com/ralexander-phi/relax">Source Code</a>
-</p>
+        <div class="column is-one-third p-4">
+          <article class="message is-info">
+            <div class="message-header">
+              <p class="is-centered">Weekly Chore Tracker</p>
+            </div>
+            <div class="message-body">
+              <p>A simple weekly chore tracker.</p>
+              <p class="mt-4"><a href="https://alexsci.com/chore-wheel/">Open</a></p>
+              <p><a href="https://github.com/ralexander-phi/chore-wheel">Source Code</a></p>
+            </div>
+          </article>
+        </div>
+      </div>
 
-<p>
-<a href="https://alexsci.com/chore-wheel/">Weekly Chore Tracker</a>
-&mdash; A simple weekly chore tracker.
-<a href="https://github.com/ralexander-phi/chore-wheel">Source Code</a>
-</p>
+      <div class="columns">
+        <div class="column is-one-third p-4">
+          <article class="message is-info">
+            <div class="message-header">
+              <p class="is-centered">Audible Website Ping</p>
+            </div>
+            <div class="message-body">
+              <p>Check Internet connectivity in your browser, with sound.</p>
+              <p class="mt-4"><a href="https://alexsci.com/web-audible-ping/">Open</a></p>
+              <p><a href="https://github.com/ralexander-phi/web-audible-ping">Source Code</a>.
+            </div>
+          </article>
+        </div>
 
-<p>
-<a href="https://alexsci.com/web-audible-ping/">Audible Website Ping</a>
-&mdash; Check Internet connectivity in your browser, with sound.
-<a href="https://github.com/ralexander-phi/web-audible-ping">Source Code</a>
-</p>
+        <div class="column is-one-third p-4">
+          <article class="message is-info">
+            <div class="message-header">
+              <p class="is-centered">Marp Action for GitHub</p>
+            </div>
+            <div class="message-body">
+              <p>Instantly host markdown presentations using GitHub Pages.</p>
+              <p class="mt-4"><a href="https://alexsci.com/test-marp-action/">Open</a></p>
+              <p><a href="https://github.com/ralexander-phi/marp-action">Source Code</a></p>
+            </div>
+          </article>
+        </div>
 
-<p>
-<a href="https://alexsci.com/test-marp-action/">Marp Action for GitHub</a>
-&mdash; Instantly host markdown presentations using GitHub Pages.
-<a href="https://github.com/ralexander-phi/marp-action">Source Code</a>
-</p>
-</section>
+        <div class="column is-one-third p-4">
+          <article class="message is-info">
+            <div class="message-header">
+              <p class="is-centered">Games for Toddlers</p>
+            </div>
+            <div class="message-body">
+              <p>Help toddlers learn basic computer skills with simple games.</p>
+              <p class="mt-4"><a href="https://alexsci.com/games/">Open</a></p>
+              <p><a href="https://github.com/ralexander-phi/games">Source Code</a></p>
+            </div>
+          </article>
+        </div>
+      </div>
 
-<section>
-<h4>Games</h4>
-<p>
-<a href="https://alexsci.com/games/">Games for Toddlers</a>
-&mdash; Help toddlers learn basic computer skills with simple games.
-<a href="https://github.com/ralexander-phi/games">Source Code</a>
-</p>
-</section>
+      <div class="columns">
+        <div class="column is-one-third p-4">
+          <article class="message is-info">
+            <div class="message-header">
+              <p class="is-centered">GitHub</p>
+            </div>
+            <div class="message-body">
+              <p>Source code for these projects &amp; more.</p>
+              <p class="mt-4"><a href="https://github.com/ralexander-phi/">Open</a></p>
+            </div>
+          </article>
+        </div>
 
-<section>
-<h4>Source Code</h4>
-<p>
-<a href="https://github.com/ralexander-phi/">GitHub</a>
-&mdash; Source code for these projects &amp; more.
-</p>
-</section>
+        <div class="column is-one-third p-4">
+          <article class="message is-info">
+            <div class="message-header">
+              <p class="is-centered">CyberChef</p>
+            </div>
+            <div class="message-body">
+              <p>A rehosted instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a></p>
+              <p class="mt-4"><a href="https://alexsci.com/CyberChef/">Open</a></p>
+            </div>
+          </article>
+        </div>
 
-<section>
-<h4>Rehosted Tools</h4>
+        <div class="column is-one-third p-4">
+          <article class="message is-info">
+            <div class="message-header">
+              <p class="is-centered">Draw.io</p>
+            </div>
+            <div class="message-body">
+              <p>A rehosted instance of <a href="https://github.com/jgraph/drawio">draw.io</a></p>
+              <p class="mt-4"><a href="https://alexsci.com/drawio/">Open</a></p>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+  </body>
+</html>
 
-<p>
-<a href="https://alexsci.com/CyberChef/">CyberChef</a>
-&mdash; An instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a>
-</p>
-
-<p>
-<a href="https://alexsci.com/drawio/">Draw.io</a>
-&mdash; An instance of <a href="https://github.com/jgraph/drawio">draw.io</a>
-</p>
-</section>
