--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <div class="column is-one-third p-4">
           <article class="message is-info">
             <div class="message-header">
-              <p class="is-centered">Android Apps</p>
+              <p class="is-centered">AWS Lambda Invoker</p>
             </div>
             <div class="message-body">
-              <p>Android Apps including AWS Lambda Invoker app</p>
-              <p class="mt-4"><a href="/android-apps/">Open</a></p>
+              <p>Run AWS Lambda functions from your Android device.</p>
+              <p class="mt-4"><a href="/android-apps/aws-lambda-invoker/">Open</a></p>
+              <p><a href="https://github.com/ralexander-phi/android-aws-lambda-runner">Code</a></p>
             </div>
           </article>
         </div>
@@ -44,12 +45,12 @@
         <div class="column is-one-third p-4">
           <article class="message is-info">
             <div class="message-header">
-              <p class="is-centered">Relax</p>
+              <p class="is-centered">Marp Action for GitHub</p>
             </div>
             <div class="message-body">
-              <p>A minimal white noise progressive web app.</p>
-              <p class="mt-4"><a href="https://alexsci.com/relax/">Open</a></p>
-              <p><a href="https://github.com/ralexander-phi/relax">Source Code</a></p>
+              <p>Instantly host markdown presentations using GitHub Pages.</p>
+              <p class="mt-4"><a href="/test-marp-action/">Open</a></p>
+              <p><a href="https://github.com/ralexander-phi/marp-action">Code</a></p>
             </div>
           </article>
         </div>
@@ -59,12 +60,25 @@
         <div class="column is-one-third p-4">
           <article class="message is-info">
             <div class="message-header">
+              <p class="is-centered">Relax</p>
+            </div>
+            <div class="message-body">
+              <p>A minimal white noise progressive web app.</p>
+              <p class="mt-4"><a href="/relax/">Open</a></p>
+              <p><a href="https://github.com/ralexander-phi/relax">Code</a></p>
+            </div>
+          </article>
+        </div>
+
+        <div class="column is-one-third p-4">
+          <article class="message is-info">
+            <div class="message-header">
               <p class="is-centered">Weekly Chore Tracker</p>
             </div>
             <div class="message-body">
               <p>A simple weekly chore tracker.</p>
-              <p class="mt-4"><a href="https://alexsci.com/chore-wheel/">Open</a></p>
-              <p><a href="https://github.com/ralexander-phi/chore-wheel">Source Code</a></p>
+              <p class="mt-4"><a href="/chore-wheel/">Open</a></p>
+              <p><a href="https://github.com/ralexander-phi/chore-wheel">Code</a></p>
             </div>
           </article>
         </div>
@@ -76,24 +90,12 @@
             </div>
             <div class="message-body">
               <p>Check Internet connectivity in your browser, with sound.</p>
-              <p class="mt-4"><a href="https://alexsci.com/web-audible-ping/">Open</a></p>
-              <p><a href="https://github.com/ralexander-phi/web-audible-ping">Source Code</a>.
+              <p class="mt-4"><a href="/web-audible-ping/">Open</a></p>
+              <p><a href="https://github.com/ralexander-phi/web-audible-ping">Code</a>.
             </div>
           </article>
         </div>
 
-        <div class="column is-one-third p-4">
-          <article class="message is-info">
-            <div class="message-header">
-              <p class="is-centered">Marp Action for GitHub</p>
-            </div>
-            <div class="message-body">
-              <p>Instantly host markdown presentations using GitHub Pages.</p>
-              <p class="mt-4"><a href="https://alexsci.com/test-marp-action/">Open</a></p>
-              <p><a href="https://github.com/ralexander-phi/marp-action">Source Code</a></p>
-            </div>
-          </article>
-        </div>
       </div>
 
       <div class="columns">
@@ -104,8 +106,8 @@
             </div>
             <div class="message-body">
               <p>Help toddlers learn basic computer skills with simple games.</p>
-              <p class="mt-4"><a href="https://alexsci.com/games/">Open</a></p>
-              <p><a href="https://github.com/ralexander-phi/games">Source Code</a></p>
+              <p class="mt-4"><a href="/games/">Open</a></p>
+              <p><a href="https://github.com/ralexander-phi/games">Code</a></p>
             </div>
           </article>
         </div>
@@ -129,7 +131,7 @@
             </div>
             <div class="message-body">
               <p>A rehosted instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a></p>
-              <p class="mt-4"><a href="https://alexsci.com/CyberChef/">Open</a></p>
+              <p class="mt-4"><a href="/CyberChef/">Open</a></p>
             </div>
           </article>
         </div>
@@ -143,7 +145,7 @@
             </div>
             <div class="message-body">
               <p>A rehosted instance of <a href="https://github.com/jgraph/drawio">draw.io</a></p>
-              <p class="mt-4"><a href="https://alexsci.com/drawio/">Open</a></p>
+              <p class="mt-4"><a href="/drawio/">Open</a></p>
             </div>
           </article>
         </div>
