Fix html checks for "broken" links

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="message-body">
               <p>Identify common software licenses.</p>
-              <p class="mt-4"><a href="/which-license/">Open</a></p>
+              <p class="mt-4"><a href="https://alexsci.com/which-license/">Open</a></p>
               <p><a href="https://github.com/ralexander-phi/which-license">Code</a></p>
             </div>
           </article>
@@ -49,7 +49,7 @@
             </div>
             <div class="message-body">
               <p>Instantly host markdown presentations using GitHub Pages.</p>
-              <p class="mt-4"><a href="/test-marp-action/">Open</a></p>
+              <p class="mt-4"><a href="https://alexsci.com/test-marp-action/">Open</a></p>
               <p><a href="https://github.com/ralexander-phi/marp-action">Code</a></p>
             </div>
           </article>
@@ -64,7 +64,7 @@
             </div>
             <div class="message-body">
               <p>A minimal white noise progressive web app.</p>
-              <p class="mt-4"><a href="/relax/">Open</a></p>
+              <p class="mt-4"><a href="https://alexsci.com/relax/">Open</a></p>
               <p><a href="https://github.com/ralexander-phi/relax">Code</a></p>
             </div>
           </article>
@@ -77,7 +77,7 @@
             </div>
             <div class="message-body">
               <p>A simple weekly chore tracker.</p>
-              <p class="mt-4"><a href="/chore-wheel/">Open</a></p>
+              <p class="mt-4"><a href="https://alexsci.com/chore-wheel/">Open</a></p>
               <p><a href="https://github.com/ralexander-phi/chore-wheel">Code</a></p>
             </div>
           </article>
@@ -90,7 +90,7 @@
             </div>
             <div class="message-body">
               <p>Check Internet connectivity in your browser, with sound.</p>
-              <p class="mt-4"><a href="/web-audible-ping/">Open</a></p>
+              <p class="mt-4"><a href="https://alexsci.com/web-audible-ping/">Open</a></p>
               <p><a href="https://github.com/ralexander-phi/web-audible-ping">Code</a>.
             </div>
           </article>
@@ -106,7 +106,7 @@
             </div>
             <div class="message-body">
               <p>Help toddlers learn basic computer skills with simple games.</p>
-              <p class="mt-4"><a href="/games/">Open</a></p>
+              <p class="mt-4"><a href="https://alexsci.com/games/">Open</a></p>
               <p><a href="https://github.com/ralexander-phi/games">Code</a></p>
             </div>
           </article>
@@ -131,7 +131,7 @@
             </div>
             <div class="message-body">
               <p>A rehosted instance of <a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a></p>
-              <p class="mt-4"><a href="/CyberChef/">Open</a></p>
+              <p class="mt-4"><a href="https://alexsci.com/CyberChef/">Open</a></p>
             </div>
           </article>
         </div>
@@ -145,7 +145,7 @@
             </div>
             <div class="message-body">
               <p>A rehosted instance of <a href="https://github.com/jgraph/drawio">draw.io</a></p>
-              <p class="mt-4"><a href="/drawio/">Open</a></p>
+              <p class="mt-4"><a href="https://alexsci.com/drawio/">Open</a></p>
             </div>
           </article>
         </div>
