--- a/index.html
+++ b/index.html
@@ -149,6 +149,18 @@
             </div>
           </article>
         </div>
+        
+        <div class="column is-one-third p-4">
+          <article class="message is-info">
+            <div class="message-header">
+              <p class="is-centered">Blog</p>
+            </div>
+            <div class="message-body">
+              <p>A blog</p>
+              <p class="mt-4"><a href="https://alexsci.com/blog/">Open</a></p>
+            </div>
+          </article>
+        </div>
       </div>
     </section>
   </body>
