Add PLU code hero

--- a/index.html
+++ b/index.html
@@ -161,6 +161,20 @@
             </div>
           </article>
         </div>
+        
+        <div class="column is-one-third p-4">
+          <article class="message is-info">
+            <div class="message-header">
+              <p class="is-centered">PLU code hero</p>
+            </div>
+            <div class="message-body">
+              <p>Product lookup code game</p>
+              <p class="mt-4"><a href="https://alexsci.com/plu-code-hero/">Open</a></p>
+              <p><a href="https://github.com/ralexander-phi/plu-code-hero">Code</a></p>
+            </div>
+          </article>
+        </div>
+
       </div>
     </section>
   </body>
