--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
 
       </div>
     </section>
+
+    <script data-goatcounter="https://alexsci.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+    
   </body>
 </html>
 
