--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </div>
     </section>
 
-    <script data-goatcounter="https://alexsci.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+    <script data-goatcounter="https://alexsci.goatcounter.com/count" async src="https://gc.zgo.at/count.js"></script>
     
   </body>
 </html>
