Add mastodon link

--- a/index.html
+++ b/index.html
@@ -197,6 +197,16 @@
           </article>
         </div>
 
+        
+        <div class="column is-one-third p-4">
+          <article class="panel is-info">
+            <div class="panel-heading">
+              <p class="is-centered">Mastodon</p>
+            </div>
+            <a class="panel-block" rel="me" href="https://indieweb.social/@robalex">I'm on Mastodon</a>
+          </article>
+        </div>
+
       </div>
 
     </section>
