--- a/index.html
+++ b/index.html
@@ -8,24 +8,21 @@
   </head>
 
   <body>
-    <nav class="navbar is-dark p-4" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-        <h1 class="title has-text-light">alexsci.com</h1>
-      </div>
-    </nav>
 
     <section class="section is-size-4">
-      <div class="notification is-danger is-light">
+      <div class="notification">
         <p class="mb-4">
         <span class="has-text-weight-bold">Hello!</span> I'm Robert.
+        <p class="mb-4">
         I use this site for my non-serious side.
-        You'll find numerous mini-projects and a blog.
-        I'm a <a href="https://www.robalexdev.com">freelance DevSecOps Engineer</a> and am always looking to meet great new clients.
+        Here you'll find my blog and numerous mini-projects.
         I'm also the operator of <a href="https://www.getlocalcert.net/">getlocalcert.net</a>.
-        </p>
+        <p class="mb-4">
+        By day, I'm a <a href="https://www.robalexdev.com">freelance DevSecOps Engineer</a> who is always looking to meet great new clients.
+        <p class="mb-4">
+        I occasionally post on <a rel="me" href="https://indieweb.social/@robalex">Mastodon</a>.
         <p>
         Enjoy.
-        </p>
       </div>
     </section>
 
@@ -33,12 +30,13 @@
       <div class="columns">
 
         <div class="column is-one-third p-4">
-          <article class="panel is-info">
+          <article class="panel is-primary">
             <div class="panel-heading">
               <p class="is-centered">Blog</p>
             </div>
             <div class="panel-block">A blog</div>
             <a class="panel-block" href="https://alexsci.com/blog/">Open</a>
+            <a class="panel-block" href="https://github.com/ralexander-phi/blog/">Code</a>
           </article>
         </div>
 
@@ -184,26 +182,6 @@
             </div>
             <p class="panel-block">A tool to bulk clone all repos in a GitHub organization</p>
             <a class="panel-block" href="https://github.com/robalexdev/github-bulk-clone-tool">Code</a>
-          </article>
-        </div>
-
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">CyberChef</p>
-            </div>
-            <p class="panel-block">A rehosted instance of&nbsp;<a href="https://github.com/gchq/CyberChef">GCHQ's CyberChef</a></p>
-            <a class="panel-block" href="https://alexsci.com/CyberChef/">Open</a>
-          </article>
-        </div>
-
-        
-        <div class="column is-one-third p-4">
-          <article class="panel is-info">
-            <div class="panel-heading">
-              <p class="is-centered">Mastodon</p>
-            </div>
-            <a class="panel-block" rel="me" href="https://indieweb.social/@robalex">I'm on Mastodon</a>
           </article>
         </div>
 
