Add: Always Open, License Approval action

--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
         <div class="column is-one-third p-4">
           <article class="panel is-info">
             <div class="panel-heading">
+              <p class="is-centered">License Approval GitHub Actions</p>
+            </div>
+            <p class="panel-block">Track and approve the licenses your project uses.</p>
+            <a class="panel-block" href="https://github.com/marketplace/actions/license-approval">Open</a>
+            <a class="panel-block" href="https://github.com/ralexander-phi/license_approval">Code</a>
+          </article>
+        </div>
+      </div>
+
+      <div class="columns">
+        <div class="column is-one-third p-4">
+          <article class="panel is-info">
+            <div class="panel-heading">
+              <p class="is-centered">Always Open</p>
+            </div>
+            <p class="panel-block">Track open source rug-pull risks.</p>
+            <a class="panel-block" href="https://always-open.alexsci.com/">Open</a>
+            <a class="panel-block" href="https://codeberg.org/robalexdev/alwaysopen">Code</a>
+          </article>
+        </div>
+
+        <div class="column is-one-third p-4">
+          <article class="panel is-info">
+            <div class="panel-heading">
               <p class="is-centered">LocalStorage Music</p>
             </div>
             <div class="panel-block">A simple PWA music player using the browsers local storage</div>
@@ -62,10 +86,7 @@
             <a class="panel-block" href="https://github.com/ralexander-phi/localstorage-music">Code</a>
           </article>
         </div>
-      </div>
 
-
-      <div class="columns">
         <div class="column is-one-third p-4">
           <article class="panel is-info">
             <div class="panel-heading">
@@ -76,7 +97,9 @@
             <a class="panel-block" href="https://github.com/ralexander-phi/relax">Code</a>
           </article>
         </div>
+      </div>
 
+      <div class="columns">
         <div class="column is-one-third p-4">
           <article class="panel is-info">
             <div class="panel-heading">
@@ -99,10 +122,6 @@
           </article>
         </div>
 
-
-      </div>
-
-      <div class="columns">
         <div class="column is-one-third p-4">
           <article class="panel is-info">
             <div class="panel-heading">
@@ -113,7 +132,9 @@
             <a class="panel-block" href="https://github.com/ralexander-phi/games">Code</a>
           </article>
         </div>
+      </div>
 
+      <div class="columns">
         <div class="column is-one-third p-4">
           <article class="panel is-info">
             <div class="panel-heading">
@@ -135,10 +156,6 @@
           </article>
         </div>
 
-      </div>
-
-      <div class="columns">
-
         <div class="column is-one-third p-4">
           <article class="panel is-info">
             <div class="panel-heading">
@@ -149,7 +166,9 @@
             <a class="panel-block" href="https://github.com/ralexander-phi/plu-code-hero">Code</a>
           </article>
         </div>
+      </div>
 
+      <div class="columns">
         <div class="column is-one-third p-4">
           <article class="panel is-info">
             <div class="panel-heading">
@@ -171,9 +190,6 @@
             <a class="panel-block" href="https://github.com/ralexander-phi/host-reachability-check">Code</a>
           </article>
         </div>
-      </div>
-
-      <div class="columns">
 
         <div class="column is-one-third p-4">
           <article class="panel is-info">
@@ -184,7 +200,6 @@
             <a class="panel-block" href="https://github.com/robalexdev/github-bulk-clone-tool">Code</a>
           </article>
         </div>
-
       </div>
 
     </section>
