Fix Relicensing Monitor links

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
         <div class="column is-one-third p-4">
           <article class="panel is-info">
             <div class="panel-heading">
-              <p class="is-centered">Always Open</p>
+              <p class="is-centered">Relicensing Monitor</p>
             </div>
             <p class="panel-block">Track open source rug-pull risks.</p>
-            <a class="panel-block" href="https://always-open.alexsci.com/">Open</a>
-            <a class="panel-block" href="https://codeberg.org/robalexdev/alwaysopen">Code</a>
+            <a class="panel-block" href="https://alexsci.com/relicensing-monitor/">Open</a>
+            <a class="panel-block" href="https://github.com/ralexander-phi/relicensing-monitor">Code</a>
           </article>
         </div>
 
