--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>alexsci.com</title>
     <link rel="stylesheet" href="bulma.min.css">
+    <link rel="me" href="https://github.com/ralexander-phi/">
+    <link rel="me" href="https://github.com/robalexdev/">
+    <link rel="me" href="https://alexsci.com/blog/">
+    <link rel="me" href="https://robalexdev.com/">
   </head>
 
   <body>
